# learning

./: .gitignore  06_conversions  README.md  nms.py  pdm.toml  pyproject.toml  pyproject.toml_pdm  test.py  testfmt  trf.py
ansible/: playbook.yml
bootstrap/: cat.html
concepts/: mvc.excalidraw
cv/: camera_calibration.py
cvutils/: test.py
d2l/: 02.ipynb
data_structures/lists/: find_2_numbers_that_add_up.py  find_minimum_value_in_list.py  find_second_maximum.py  list_of_products.py  maximum_sum_contiguous_sublist.py  merge_sorted_lists.py  rearrange_positivei_and_negative_values.py  rearrange_sorted_list_min_max.py  remove_even_int_from_list.py  right_rotate_list.py
dets/: entrypoint.py
dets/utils/: basic.py  coco.py  helpers.py  (+2 more)
farm/: .python-version
fastapi/: basic.py
fastapitest/: basic.py  server.py
graph/: test.yaml  yml2dot.py
grpc/: myroute.proto  myroute_pb2.py  myroute_pb2_grpc.py
helm/: helm.sh
hydra/: basic.py
jquery/: jquery_basics.html  jquery_selectors.html
js/: binary_string.js  cash_register.js  drop_non_satisfying.js  every.js  int2roman.js  least_common_div.js  loops.html  missing_letter.js  oop.js  optional_args.js  pairs_lookup.js  palindrome_checker.js  search_replace.js  simple.html  sorted_union.js  sum_num_in_range.js  sum_odd_fibs.js
k8s/: daemonset.yaml  initcontainer.yaml  job.yaml  pod.yaml  sharepod.yaml
ml/: convnets.py
network/: tcp.py  udp.py  udp_chat.py  udp_client_improved.py
nix/: README.md  chord_example.nix  chord_failing_example.nix  default.nix  flake.nix  result
od/: config.yaml  entrypoint.py
pb2/: basics.py  testbook
pyo3-maturin/: Cargo.toml  example.py
pyo3-maturin/src/: lib.rs
python/: instantiation.py
python/pyo3-maturin/: Cargo.toml  example.py  pyproject.toml
react/: component.js  jsx.js  redux.js  simple.js
rust/: 00_hello_world.rs  01_rust_anatomy.rs  02_functions.rs  03_bools.rs  04_conditionals.rs  05_mutables_and_loops.rs  06_structs_ownership.rs  07_references.rs  Cargo.toml  bin
shell/: argument_check.sh  bash_script.sh  basic_date.sh  count_chars.sh  directories_comparison.sh  empty_files.sh  factors.sh  file_sizes.sh  generate_random.sh  great_day.sh  hello_world.sh  here_doc.sh  host_status.sh  num_of_args.sh  output.txt  sum.sh
sql/: 511.sql  512.sql  534.sql  550.sql  570.sql  571.sql  580.sql  586.sql  603.sql  607.sql  608.sql
tdd/: .coverage  line_reader.py  test_line_reader.py
vault/: unseal1  unseal2  unseal3  unseal4  unseal5
videostream/: receive.py  send.py
(+141 files in other folders)
