[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Marc Alphonsus <<marc.alphonsus@helsing.ai>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycocotools = "^2.0.5"
grpcio = "^1.50.0"
grpcio-tools = "^1.50.0"
hydra-core = "^1.2.0"
pandas = "^1.5.1"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
