[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Marc Alphonsus <<marc.alphonsus@helsing.ai>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycocotools = "^2.0.5"
hydra-core = "^1.2.0"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"
torch = "1.12"
pytorch-lightning = "^1.8.1"
rich = "^12.6.0"
torchvision = "^0.13.0"
pandas = "^1.5.1"
albumentations = "^1.3.0"
typer = "^0.7.0"
colorama = "^0.4.6"
shellingham = "^1.5.0"
pytest = "^7.2.0"
fsspec = "^2022.11.0"


[tool.poetry.dev-dependencies]
black = "^22.10.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
