[package]
name = "pyo3-maturin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_maturin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["extension-module"] }
serde = { version= "1.0.148", features = ["derive"] }
pyo3-log = "0.5.0"
log = "0.4.14"
serde_json = "1.0.89"
